// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ordered list 1`] = `
<ol
  class="list"
>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
</ol>
`;

exports[`renders unordered list 1`] = `
<ul
  class="list"
>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
</ul>
`;
